Change template of import file and fix minor bug

--- a/cm/templates/admin/cm/Program/change_form.html
+++ b/cm/templates/admin/cm/Program/change_form.html
@@ -2,7 +2,7 @@
 {% load i18n admin_urls %}
 {% block object-tools-items %}
     <li>
-        <a href="/cm/import_subject/{{ original.program_id }}">My Link</a>
+        <a href="/cm/import_subject/{{ original.program_id }}">Import subject</a>
     </li>
     
 {% endblock %}
